# Frappe

./: .gitignore  pyproject.toml
frappe/: app.py  frappe_image.py  frappe_tracks.py  multiprocessing_funs.py
frappe/dialogs/: metadata_dialog.py
frappe/pyuic5_output/: image_viewer.py  main_window.py  metadata_dialog.py  slider.py  track_viewer.py
frappe/ui/: image_viewer.ui  main_window.ui  metadata_dialog.ui  slider.ui  track_viewer.ui
frappe/utilities/: cursor_label.py  decorators.py  reader_utilities.py
frappe/widgets/: image_viewer.py  lines.py  multi_slider.py
